--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,7 +45,7 @@ body {
   position: relative;
   width: 16rem;
   height: 17rem;
-  transform: rotate(5deg);
+  transform: rotate(5deg) scale(0.4);
 }
 
 .drum .side {
