--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,7 @@ body {
  */
 input[type="range"][orient="vertical"] {
   -webkit-appearance: slider-vertical;
+  appearance: slider-vertical;
   width: 16px;
   height: 175px;
   padding: 0 5px;
