DAW#53 load public/samples directory

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,14 @@
   }
 }
 
+html,
+body,
+main {
+  height: 100vh;
+  max-height: 100vh;
+  overflow: hidden;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
