DAW#28 Refactoring & Transport select's

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  box-sizing: border-box;
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -58,7 +62,7 @@ input[type="range"][orient="vertical"] {
 /**
  * Animated SnareDrum
  */
-.drum {
+/* .drum {
   --drum-yellow: #e9c46a;
   --drum-dark-yellow: #cf9b1f;
   --drum-light-red: #ef233c;
@@ -355,14 +359,11 @@ input[type="range"][orient="vertical"] {
     transform: scale(0.6);
     opacity: 1;
   }
-}
+} */
 
 /**
  * ADSR Envelope Plugin
  */
-* {
-  box-sizing: border-box;
-}
 .defs {
   position: absolute;
   width: 0;
@@ -370,16 +371,17 @@ input[type="range"][orient="vertical"] {
   opacity: 0;
 }
 .fl-studio-envelope {
-  position: absolute;
+  /* position: absolute;
   left: 50%;
   top: 50%;
+  */
   width: 600px;
   padding: 20px;
   overflow: hidden;
   background: #363c40;
   border: 2px solid #272d31;
   box-shadow: 0 10px 70px rgba(0, 0, 0, 0.6);
-  transform: translate(-50%, -50%);
+  /* transform: translate(-50%, -50%); */
 }
 .fl-studio-envelope__visualizer {
   height: 200px;
@@ -468,7 +470,7 @@ input[type="range"][orient="vertical"] {
   height: 100%;
 }
 .knob-input__input {
-  cursor: grab;
+  cursor: grabbing;
   position: absolute;
   left: 0;
   top: 0;
