--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,7 @@ body {
 /**
  * Form
  */
-input[type="range"][orient="vertical"] {
+input[type='range'][orient='vertical'] {
   -webkit-appearance: slider-vertical;
   appearance: slider-vertical;
   width: 16px;
@@ -415,7 +415,7 @@ input[type="range"][orient="vertical"] {
   width: 80px;
   color: #c1c5c5;
   font-size: 10px;
-  font-family: "Helvetica", sans-serif;
+  font-family: 'Helvetica', sans-serif;
   font-weight: 700;
   text-align: center;
   letter-spacing: 1px;
@@ -482,4 +482,99 @@ input[type="range"][orient="vertical"] {
 body.knob-input__drag-active,
 body.knob-input__drag-active * {
   cursor: grabbing !important;
+}
+
+/*** Gold Knob */
+.goldknob {
+  position: relative;
+}
+
+.goldknob .knob {
+  width: 80%;
+  height: 80%;
+  position: relative;
+  margin: 10%;
+  cursor: pointer;
+}
+
+.goldknob .teeth {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  width: 100%;
+  height: 100%;
+  transform: rotateZ(var(--angle));
+  filter: blur(3px) contrast(7);
+  background: white;
+}
+
+.goldknob .teeth::after {
+  content: '';
+  width: 90%;
+  height: 90%;
+  border-radius: 100%;
+  background: radial-gradient(black 65%, transparent 66%) no-repeat,
+    repeating-conic-gradient(black 0%, 2.5%, transparent 2.5%, transparent 5%);
+}
+
+.goldknob .cap {
+  display: flex;
+  border-radius: 100%;
+  width: 76%;
+  height: 76%;
+  position: absolute;
+  top: 12%;
+  left: 12%;
+  box-shadow: 0 0 2px 1px #c7a472;
+  background: repeating-conic-gradient(
+    from 15deg,
+    #3e2206 0%,
+    #3e2206 4%,
+    #f4ebd0 5%,
+    #f4ebd0 15%,
+    #3e2206 16%,
+    #3e2206 34%,
+    #f4ebd0 35%,
+    #f4ebd0 45%,
+    #3e2206 46%,
+    #3e2206 50%
+  );
+}
+
+.goldknob .cap::after {
+  content: '';
+  border-radius: 100%;
+  width: 90%;
+  height: 90%;
+  margin: 5%;
+  background: repeating-radial-gradient(
+      transparent 0%,
+      rgb(244 235 208 / 15%) 2%,
+      transparent 4%
+    ),
+    repeating-conic-gradient(
+      from 15deg,
+      #4d3718 0%,
+      #c7a472 5%,
+      #4d3718 16%,
+      #4d3718 34%,
+      #c7a472 45%,
+      #4d3718 50%
+    );
+  box-shadow: inset 0 0 7px 0px #c7a472;
+}
+
+.goldknob .indicator {
+  top: 60%;
+  left: 48%;
+  transform-origin: 50% -50%;
+  position: absolute;
+  transform: rotateZ(var(--angle));
+  width: 4%;
+  height: 20%;
+  background: black;
+  box-shadow: 0 0 2px white;
+  border-radius: 30%/10%;
+  pointer-events: none;
 }
